# SI206-FinalProject

./: .gitignore  README.md  analyze_covid_data.py  average_by_state.txt  average_positive_increase.txt  avg_by_state.py  covid_data.db  covid_data2.db  csv_manipulation.py  gen_map.py  gen_map_example.py  heatmap_with_time.html  import sqlite3.py  load_covid_data.py  pyproject.toml  test.py  time_series_to_sql.py  us_satellite_map.html
