[project]
name = "si206-final-project"
version = "0.1.0"
description = "Dynamic heat map of covid19 cases across America"
authors = [
    {name = "Charlie Weiss",email = "csweiss45@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium (>=0.19.5,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
